plugins {
    id 'org.springframework.boot' version '2.2.6.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
    id 'com.github.jk1.dependency-license-report' version '1.13'
}

group = 'org.codeforamerica'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    jaxb
}

repositories {
    mavenCentral()
}

task genJaxb {
    ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
    ext.classesDir = "${buildDir}/classes/jaxb"
    ext.schema = "src/main/resources/object-service-port.wsdl"

    outputs.dir classesDir

    doLast() {
        project.ant {
            taskdef name: "xjc", classname: "com.sun.tools.xjc.XJCTask",
                    classpath: configurations.jaxb.asPath
            mkdir(dir: sourcesDir)
            mkdir(dir: classesDir)

            xjc(destdir: sourcesDir, schema: schema,
                    package: "org.codeforamerica.shiba.esbwsdl") {
                arg(value: "-wsdl")
                produces(dir: sourcesDir, includes: "**/*.java")
            }

            javac(destdir: classesDir, source: 1.8, target: 1.8, debug: true,
                    debugLevel: "lines,vars,source",
                    classpath: configurations.jaxb.asPath) {
                src(path: sourcesDir)
                include(name: "**/*.java")
                include(name: "*.java")
            }

            copy(todir: classesDir) {
                fileset(dir: sourcesDir, erroronmissingdir: false) {
                    exclude(name: "**/*.java")
                }
            }
        }
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation('org.springframework.boot:spring-boot-starter-web-services') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
    }
    implementation 'org.glassfish.jaxb:jaxb-runtime'
    implementation 'org.apache.pdfbox:pdfbox:2.0.19'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.jetbrains:annotations:19.0.0'
    implementation 'commons-validator:commons-validator:1.6'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.apache.httpcomponents:httpclient'
    implementation 'io.sentry:sentry-spring:1.7.30'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    runtimeOnly 'org.flywaydb:flyway-core:6.4.4'

    implementation(files(genJaxb.classesDir).builtBy(genJaxb))
    jaxb "com.sun.xml.bind:jaxb-xjc:2.1.7"

    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.awaitility:awaitility:4.0.2'
    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.27.1'
    testImplementation 'io.github.bonigarcia:webdrivermanager:4.0.0'
    testImplementation 'org.springframework.ws:spring-ws-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

compileJava.inputs.files(processResources)

test {
    useJUnitPlatform()
}

licenseReport {
    allowedLicensesFile = new File("$projectDir/allowed-licenses.json")
}

build {
    dependsOn(checkLicense)
}